--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.dash-cards {
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
+}
+.chip-container {
+  height: 55px;
+}
+.news-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.card-container {
+  width: 350px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.graph-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.dash-container {
+  box-shadow: 0px 0px 20px 3px rgb(40, 39, 39);
+  border-radius: 5%/8%;
+  margin-top: 20px;
+  background-color: rgb(97, 97, 97);
+  width: 1400px;
+  display: grid;
+  grid-template-columns: 30px 600px auto;
+  grid-template-rows: 80px auto 30px;
+}
+.side-feed-container {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+.side-grid-container {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+.news-heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+.textbox-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  padding-left: 5%;
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+}
+.details {
+  display: flex;
+  flex-direction: row;
+}
+
+.link {
   color: white;
+  text-decoration: none;
+}
+.link:hover {
+  color: rgb(62, 203, 62);
+  text-decoration: underline;
 }
 
-.App-link {
-  color: #61dafb;
+@media only screen and (max-width: 1200px) {
+  .dash-container {
+    width: 850px;
+    border-radius: 8%/5%;
+  }
+  .side-feed {
+    border-radius: 10%/3%;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 850px) {
+  .dash-container {
+    width: 460px;
+    border-radius: 10%/3%;
+    grid-template-columns: 30px 400px;
+    grid-template-rows: 70px 600px 30px auto 30px;
   }
-  to {
-    transform: rotate(360deg);
+  .side-feed {
+    border-radius: 10%/5%;
+    height: 600px;
   }
+  .side-grid-container {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+  }
+}
+
+.tester {
+  color: #05a905;
 }
