--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
+body {
+  background-color: rgb(52, 52, 55);
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 .App {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.under-title {
+  display: grid;
+  width: 1200px;
+  grid-template-columns: 300px 600px 300px;
 }
 .dash-cards {
   grid-column: 2 / 4;
@@ -21,7 +35,6 @@
 }
 .card-container {
   width: 350px;
-  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -70,7 +83,6 @@
   display: flex;
   flex-direction: row;
 }
-
 .link {
   color: white;
   text-decoration: none;
@@ -80,6 +92,11 @@
   text-decoration: underline;
 }
 
+.tester {
+  color: #05a905;
+}
+
+/* media queries for screen size responsiveness */
 @media only screen and (max-width: 1200px) {
   .dash-container {
     width: 850px;
@@ -89,7 +106,6 @@
     border-radius: 10%/3%;
   }
 }
-
 @media only screen and (max-width: 850px) {
   .dash-container {
     width: 460px;
@@ -105,8 +121,4 @@
     grid-column: 2 / 3;
     grid-row: 4 / 5;
   }
-}
-
-.tester {
-  color: #05a905;
 }
