--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,12 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
 body {
-  background-color: rgb(52, 52, 55);
+  background-color: #343437;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* pre-load */
+.main-loading {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* header section */
@@ -30,15 +39,15 @@ body {
 
 /* dashboard component */
 .dash-container {
-  box-shadow: 0px 0px 20px 3px rgb(40, 39, 39);
+  box-shadow: 0px 0px 20px 3px #282727;
   margin: 0 auto;
   border-radius: 2vh;
-  background-color: rgb(97, 97, 97);
+  background-color: #616161;
   width: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 2000px;
+  height: 1400px;
 }
 
 /* form component */
@@ -63,23 +72,24 @@ body {
 .paper-container {
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 95%;
-  height: 650px;
-  border-radius: 2vh;
+  height: 600px;
+  border-radius: 1.5vh;
   color: white;
-  background-color: rgb(52, 52, 55);
+  background-color: #343437;
   margin: 10px auto;
 }
 .article-container {
-  background-color: rgb(52, 52, 55);
+  background-color: #343437;
   height: 95%;
   width: 98%;
   margin: 5px auto;
   overflow-y: auto;
 }
 .chip-container {
-  background-color: rgb(52, 52, 55);
-  width: 90%;
+  background-color: #343437;
+  width: auto;
   margin: 0 auto;
   padding: 5px 10px;
   border-radius: 1vh;
@@ -88,10 +98,17 @@ body {
   flex-wrap: wrap;
   justify-content: center;
 }
+.loading-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
 
 /* chart component*/
 .widget-container {
-  background-color:rgb(52, 52, 55);
+  background-color:#343437;
   margin: 10px auto;
   border-radius: 2vh;
   height: 700px;
@@ -103,7 +120,7 @@ body {
   display: none;
 }
 
-/* market component */
+/* market (replaces chart on mobile) component */
 .market-overview {
   display: flex;
   align-items: center;
@@ -115,9 +132,11 @@ body {
 
 /* footer */
 .footer {
+  font-size: 12px;
   width: 100%;
   height: 200px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -128,18 +147,33 @@ body {
   text-decoration: none;
 }
 .link:hover {
-  color: rgb(62, 203, 62);
+  color: #3ecb3e;
   text-decoration: underline;
+}
+
+/* terms of service and privacy policy */
+.policy-container {
+  width: 90%;
+  color: white;
+}
+.policy-h2 {
+  text-decoration: underline;
+}
+.policy-ul {
+  text-align: left;
 }
 
 
 .tester {
-  color: #05a905;
+  color: #242424;
 }
 
 @media only screen and (min-width: 400px) {
   .chip-container {
     width: auto;
+  }
+  .dash-container {
+    height: 1500px;
   }
 }
 
@@ -152,14 +186,14 @@ body {
   }
   .dash-container {
     display: grid;
-    grid-template-columns: 30px 500px auto;
-    grid-template-rows: 80px auto 700px 30px;
+    grid-template-columns: 30px 450px auto;
+    grid-template-rows: 80px auto 620px 20px;
     width: 97%;
     height: auto;
   }
   .paper-container {
     width: 100%;
-    height: 680px;
+    height: 97%;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
   }
@@ -172,10 +206,11 @@ body {
     grid-row: 2 / 3;
   }
   .widget-container {
-    height: 650px;
+    height: 93%;
     width: 93%;
+    margin-top: 25px;
     grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    grid-row: 1 / 4;
   }
   
   
@@ -203,6 +238,11 @@ body {
     height: 35px;
     cursor: pointer;
     border-bottom: 5px solid #05a905;
+  }
+
+
+  .policy-container {
+    width: 600px;
   }
 
 }
