--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,6 +12,8 @@ body {
 /* pre-load */
 .main-loading {
   height: 100vh;
+  width: 100%;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
